@@ -8,6 +8,13 @@ Changelog Legend:
 [x] = Deleted
 [!] = Bugs
 
+(01/07/14) - Improvements - Version 1.9.4.4
+
+[+] Added improved support gallery images
+[x] Removed old tags
+
+----
+
 (12/22/13) - Improvements - Version 1.9.4.3
 
 [+] Allow switching minified scripts with SCRIPT_DEBUG
